--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ main{
 }
 
 .background{
-    background: url(../public/Pigs.png) no-repeat;
+    background: url(../public/pigsblur.jpg) no-repeat;
     background-size: cover;
     width: 100%;
     height: 100vh;
@@ -101,6 +101,7 @@ main{
 .blur{
     background: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(8px);
+    -webkit-filter: blur(8px);
     height: 100vh;
     width: 100%;
 }
