--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ main{
 .main__wrapper-img{
     height: 301px;
     width: 375px;
-    
+
 }
 
 .main__inner{
@@ -99,7 +99,41 @@ main{
     position: absolute;
 }
 
-audio{
+.player{
+    display: flex;
     width: 375px;
-    border-radius: 0px;
+    background: white;
+    padding: 9px 15px;
+}
+
+.player__inner{
+    width: 100%;
+}
+
+.player__inner p{
+    margin-bottom: 15px;
+}
+.img__src{
+    width: 50px;
+    height: 50px;
+}
+
+.play{
+    margin-right: 15px;
+    cursor: pointer;
+}
+
+.progress__container{
+    background: #dcdcdc;
+    border-radius: 5px;
+    width: 100%;
+    height: 5px ;
+    cursor: pointer;
+}
+
+.progress{
+    background: #000;
+    height: 5px;
+    border-radius: 5px;
+    width: 0%;
 }
